--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
+    "format": "prettier --write ./",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "mathjs": "^11.11.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-uuid": "^2.0.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -24,7 +25,8 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "gh-pages": "^6.0.0",
+    "gh-pages": "6.0.0",
+    "prettier": "^3.0.3",
     "vite": "^4.4.5"
   }
 }
